--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,13 @@
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:testdb
-# h2 console is available at http://localhost:8080/console
+spring.datasource.url=jdbc:postgresql://localhost:5436/student
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+
+server.error.include-message=always
+
+app.name=DemoApp
+
+key=mykey
